--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,8 @@
-# for restoring vim sessions
-set -g @resurrect-strategy-vim 'session'
-
+# list of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# for restoring vim sessions
+set -g @resurrect-strategy-vim 'session'
 
 run '~/.tmux/plugins/tpm/tpm'
