--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+set -g default-terminal "screen-256color"
+set -g xterm-keys on
+
 # list of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
