--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,13 @@
+# shortcuts
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+# vi mode for buffer(copy mode)
+setw -g mode-keys vi
+
 set -g default-terminal "screen-256color"
 set -g xterm-keys on
 
