--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,7 @@ set -g xterm-keys on
 # list of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'jbnicolai/tmux-fpp'
 
 # for restoring vim sessions
 set -g @resurrect-strategy-vim 'session'
