--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,7 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+bind S set-window-option synchronize-panes \; display "Toggled Synchronize Panes!"
 
 # vi mode for buffer(copy mode)
 setw -g mode-keys vi
@@ -18,5 +19,7 @@ set -g @plugin 'jbnicolai/tmux-fpp'
 
 # for restoring vim sessions
 set -g @resurrect-strategy-vim 'session'
+# for neovim
+set -g @resurrect-strategy-nvim 'session'
 
 run '~/.tmux/plugins/tpm/tpm'
