--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,9 @@ setw -g mode-keys vi
 set -g default-terminal "screen-256color"
 set -g xterm-keys on
 
+# for neovim
+set -sg escape-time 10
+
 # list of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
