Increase tmux scrollback buffer

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,9 @@ setw -g mode-keys vi
 set -g default-terminal "screen-256color"
 set -g xterm-keys on
 
+# increase scrollback buffer
+set -g history-limit 20000
+
 # for neovim
 set -sg escape-time 10
 
