Add VIM style tmux pane switching shortcut

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,12 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 bind S set-window-option synchronize-panes \; display "Toggled Synchronize Panes!"
 
+# VIM style pane switching
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 # vi mode for buffer(copy mode)
 setw -g mode-keys vi
 
