Add powerline options

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,4 +34,8 @@ set -g @resurrect-strategy-vim 'session'
 # for neovim
 set -g @resurrect-strategy-nvim 'session'
 
-run '~/.tmux/plugins/tpm/tpm'
+if-shell 'test -d ~/.local/lib/python3.7/site-packages/powerline' \
+  'source-file ~/.local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf' \
+  'run-shell "powerline-daemon -q"'
+
+run -b '~/.tmux/plugins/tpm/tpm'
