Fix diff-highlight location

--- a/.gitconfig
+++ b/.gitconfig
@@ -22,8 +22,8 @@
 [diff]
   compactionHeuristic = true
 [interactive]
-  diffFilter = ~/rc/diff-highlight
+  diffFilter = ~/dotfiles/diff-highlight
 [pager]
-  log = ~/rc/diff-highlight | less -R -X -e
-  show = ~/rc/diff-highlight | less -R -X -e
-  diff = ~/rc/diff-highlight | less -R -X -e
+  log = ~/dotfiles/diff-highlight | less -R -X -e
+  show = ~/dotfiles/diff-highlight | less -R -X -e
+  diff = ~/dotfiles/diff-highlight | less -R -X -e
