Set git default branch name to 'main'

--- a/.gitconfig
+++ b/.gitconfig
@@ -27,3 +27,5 @@
   log = ~/dotfiles/diff-highlight | less -R -X -e
   show = ~/dotfiles/diff-highlight | less -R -X -e
   diff = ~/dotfiles/diff-highlight | less -R -X -e
+[init]
+	defaultBranch = main
