Add key binding to create window from current dir

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,12 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Eaxy create window from current directory
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
+
 # vi mode for buffer(copy mode)
 setw -g mode-keys vi
 
