Update tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,8 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
+# tmux messages are displayed for 4 seconds
+set -g display-time 4000
 
 # vi mode for buffer(copy mode)
 setw -g mode-keys vi
@@ -25,7 +27,7 @@ set -g default-terminal "screen-256color"
 set -g xterm-keys on
 
 # increase scrollback buffer
-set -g history-limit 40000
+set -g history-limit 50000
 
 # for neovim
 set -sg escape-time 10
@@ -34,14 +36,14 @@ set -sg escape-time 10
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'jbnicolai/tmux-fpp'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'laktak/extrakto'
 
 # for restoring vim sessions
 set -g @resurrect-strategy-vim 'session'
 # for neovim
 set -g @resurrect-strategy-nvim 'session'
 
-if-shell 'test -d ~/.local/lib/python3.7/site-packages/powerline' \
-  'source-file ~/.local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf' \
-  'run-shell "powerline-daemon -q"'
+if-shell 'env "$POWERLINE_CONFIG_COMMAND" tmux setup' '' 'run-shell "powerline-config tmux setup"'
 
 run -b '~/.tmux/plugins/tpm/tpm'
