Update tmux initialize line

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,4 +46,4 @@ set -g @resurrect-strategy-nvim 'session'
 
 if-shell 'env "$POWERLINE_CONFIG_COMMAND" tmux setup' '' 'run-shell "powerline-config tmux setup"'
 
-run -b '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
