--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,6 +38,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'jbnicolai/tmux-fpp'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'laktak/extrakto'
+set -g @plugin 'rickstaa/tmux-notify'
 
 # for restoring vim sessions
 set -g @resurrect-strategy-vim 'session'
