--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,11 +26,13 @@ setw -g mode-keys vi
 set -g default-terminal "screen-256color"
 set -g xterm-keys on
 
+set -g pane-border-status top
+
 # increase scrollback buffer
 set -g history-limit 50000
 
 # for neovim
-set -sg escape-time 20
+set -sg escape-time 40
 
 # list of plugins
 set -g @plugin 'tmux-plugins/tpm'
